Fixed bug #72853 (stream_set_blocking doesn't work)

Implemented  PHP_STREAM_OPTION_META_DATA_API for plain_wrappers